# mcu_minimal

./: CMakeLists.txt
app/: CMakeLists.txt  main.c
hal/: .cproject  CMakeLists.txt
hal/stm32F7/: CMakeLists.txt
hal/stm32F7/CMSIS/: .a.swp  .exception_handlers.c.swp  CMakeLists.txt  exception_handlers.c  sections_mem.ld  system_stm32f7xx.c  vectors_stm32f767xx.c
hal/stm32F7/CMSIS/newlib/: _startup.c
